--- a/testing/google-cloud-appengine-java8/pom.xml
+++ b/testing/google-cloud-appengine-java8/pom.xml
@@ -3,19 +3,17 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <packaging>war</packaging>
   <artifactId>google-cloud-appengine-java8</artifactId>
-  <version>0.1.0</version>
+  <version>0.17.3-alpha-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <parent>
-    <artifactId>google-cloud-pom</artifactId>
+    <artifactId>google-cloud-testing2</artifactId>
     <groupId>com.google.cloud</groupId>
     <version>0.17.3-alpha-SNAPSHOT</version>
-    <relativePath>../..</relativePath>
   </parent>
 
   <properties>
-    <appengine.sdk.version>1.9.51</appengine.sdk.version>
     <jetty.maven.plugin>9.3.8.v20160314</jetty.maven.plugin>
     <java.source.version>1.8</java.source.version>
   </properties>
@@ -31,7 +29,6 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>google-cloud-managed-test</artifactId>
-      <version>0.17.3-alpha-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
