--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.google.cloud</groupId>
   <artifactId>google-cloud-pom</artifactId>
   <packaging>pom</packaging>
-  <version>0.20.2-alpha</version>
+  <version>0.20.3-alpha-SNAPSHOT</version>
   <name>Google Cloud</name>
   <url>https://github.com/GoogleCloudPlatform/google-cloud-java</url>
   <description>
@@ -140,31 +140,31 @@
     <http-client.version>1.21.0</http-client.version>
     <protobuf.version>3.3.0</protobuf.version>
 
-    <cloud.version>0.20.2-alpha</cloud.version>
-    <bigquery.version>0.20.2-beta</bigquery.version>
-    <compute.version>0.20.2-alpha</compute.version>
-    <contrib.version>0.20.2-alpha</contrib.version>
-    <core.version>1.2.2</core.version>
-    <core-http.version>1.2.2</core-http.version>
-    <core-grpc.version>1.2.2</core-grpc.version>
-    <datastore.version>1.2.2</datastore.version>
-    <dlp.version>0.20.2-alpha</dlp.version>
-    <dns.version>0.20.2-alpha</dns.version>
-    <errorreporting.version>0.20.2-alpha</errorreporting.version>
-    <examples.version>0.20.2-alpha</examples.version>
-    <language.version>0.20.2-beta</language.version>
-    <logging.version>1.2.2</logging.version>
-    <monitoring.version>0.20.2-alpha</monitoring.version>
-    <pubsub.version>0.20.2-beta</pubsub.version>
-    <resourcemanager.version>0.20.2-alpha</resourcemanager.version>
-    <spanner.version>0.20.2-beta</spanner.version>
-    <speech.version>0.20.2-alpha</speech.version>
-    <storage.version>1.2.2</storage.version>
-    <trace.version>0.20.2-alpha</trace.version>
-    <translate.version>0.20.2-beta</translate.version>
-    <vision.version>0.20.2-beta</vision.version>
-    <video-intelligence.version>0.20.2-alpha</video-intelligence.version>
-    <testing.version>0.20.2-alpha</testing.version>
+    <cloud.version>0.20.3-alpha-SNAPSHOT</cloud.version>
+    <bigquery.version>0.20.3-beta-SNAPSHOT</bigquery.version>
+    <compute.version>0.20.3-alpha-SNAPSHOT</compute.version>
+    <contrib.version>0.20.3-alpha-SNAPSHOT</contrib.version>
+    <core.version>1.2.3-SNAPSHOT</core.version>
+    <core-http.version>1.2.3-SNAPSHOT</core-http.version>
+    <core-grpc.version>1.2.3-SNAPSHOT</core-grpc.version>
+    <datastore.version>1.2.3-SNAPSHOT</datastore.version>
+    <dlp.version>0.20.3-alpha-SNAPSHOT</dlp.version>
+    <dns.version>0.20.3-alpha-SNAPSHOT</dns.version>
+    <errorreporting.version>0.20.3-alpha-SNAPSHOT</errorreporting.version>
+    <examples.version>0.20.3-alpha-SNAPSHOT</examples.version>
+    <language.version>0.20.3-beta-SNAPSHOT</language.version>
+    <logging.version>1.2.3-SNAPSHOT</logging.version>
+    <monitoring.version>0.20.3-alpha-SNAPSHOT</monitoring.version>
+    <pubsub.version>0.20.3-beta-SNAPSHOT</pubsub.version>
+    <resourcemanager.version>0.20.3-alpha-SNAPSHOT</resourcemanager.version>
+    <spanner.version>0.20.3-beta-SNAPSHOT</spanner.version>
+    <speech.version>0.20.3-alpha-SNAPSHOT</speech.version>
+    <storage.version>1.2.3-SNAPSHOT</storage.version>
+    <trace.version>0.20.3-alpha-SNAPSHOT</trace.version>
+    <translate.version>0.20.3-beta-SNAPSHOT</translate.version>
+    <vision.version>0.20.3-beta-SNAPSHOT</vision.version>
+    <video-intelligence.version>0.20.3-alpha-SNAPSHOT</video-intelligence.version>
+    <testing.version>0.20.3-alpha-SNAPSHOT</testing.version>
   </properties>
   <dependencyManagement>
     <dependencies>
