--- a/google-cloud-testing/google-cloud-managedtest/pom.xml
+++ b/google-cloud-testing/google-cloud-managedtest/pom.xml
@@ -4,13 +4,13 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>google-cloud-managedtest</artifactId>
-  <version>0.20.2-alpha</version>
+  <version>0.20.3-alpha-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <parent>
     <artifactId>google-cloud-testing</artifactId>
     <groupId>com.google.cloud</groupId>
-    <version>0.20.2-alpha</version>
+    <version>0.20.3-alpha-SNAPSHOT</version>
   </parent>
 
   <dependencies>
