--- a/google-cloud-testing/pom.xml
+++ b/google-cloud-testing/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>google-cloud-testing</artifactId>
-  <version>0.20.2-alpha</version>
+  <version>0.20.3-alpha-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Google Cloud Testing</name>
@@ -13,7 +13,7 @@
   <parent>
     <groupId>com.google.cloud</groupId>
     <artifactId>google-cloud-pom</artifactId>
-    <version>0.20.2-alpha</version>
+    <version>0.20.3-alpha-SNAPSHOT</version>
   </parent>
   <properties>
     <site.installationModule>google-cloud-testing</site.installationModule>
