--- a/google-cloud-container/pom.xml
+++ b/google-cloud-container/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>google-cloud-container</artifactId>
-  <version>0.44.0-beta</version><!-- {x-version-update:google-cloud-container:current} -->
+  <version>0.44.1-beta-SNAPSHOT</version><!-- {x-version-update:google-cloud-container:current} -->
   <packaging>jar</packaging>
   <name>Google Cloud Container</name>
   <url>https://github.com/GoogleCloudPlatform/google-cloud-java/tree/master/google-cloud-container</url>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.google.cloud</groupId>
     <artifactId>google-cloud-pom</artifactId>
-    <version>0.44.0-alpha</version><!-- {x-version-update:google-cloud-pom:current} -->
+    <version>0.44.1-alpha-SNAPSHOT</version><!-- {x-version-update:google-cloud-pom:current} -->
   </parent>
   <properties>
     <site.installationModule>google-cloud-container</site.installationModule>
