--- a/google-cloud-language/pom.xml
+++ b/google-cloud-language/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>google-cloud-language</artifactId>
-  <version>1.26.0</version><!-- {x-version-update:google-cloud-language:current} -->
+  <version>1.26.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-language:current} -->
   <packaging>jar</packaging>
   <name>Google Cloud Natural Language</name>
   <url>https://github.com/GoogleCloudPlatform/google-cloud-java/tree/master/google-cloud-language</url>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.google.cloud</groupId>
     <artifactId>google-cloud-pom</artifactId>
-    <version>0.44.0-alpha</version><!-- {x-version-update:google-cloud-pom:current} -->
+    <version>0.44.1-alpha-SNAPSHOT</version><!-- {x-version-update:google-cloud-pom:current} -->
   </parent>
   <properties>
     <site.installationModule>google-cloud-language</site.installationModule>
