--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.google.cloud</groupId>
   <artifactId>google-cloud-pom</artifactId>
   <packaging>pom</packaging>
-  <version>0.44.0-alpha</version><!-- {x-version-update:google-cloud-pom:current} -->
+  <version>0.44.1-alpha-SNAPSHOT</version><!-- {x-version-update:google-cloud-pom:current} -->
   <name>Google Cloud</name>
   <url>https://github.com/GoogleCloudPlatform/google-cloud-java</url>
   <description>
@@ -136,7 +136,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <github.global.server>github</github.global.server>
     <site.installationModule>google-cloud</site.installationModule>
-    <bom.version>0.44.0-alpha</bom.version><!-- {x-version-update:google-cloud-pom:current} -->
+    <bom.version>0.44.1-alpha-SNAPSHOT</bom.version><!-- {x-version-update:google-cloud-pom:current} -->
     <api-client.version>1.23.0</api-client.version>
     <gax.version>1.23.0</gax.version>
     <google.auth.version>0.9.0</google.auth.version>
